18 Nov 2004 Reduction in memory requirements for phonon calculation
            with uspp (routine dvanqq) - courtesy of N. Mounet
            Memory leak in Raman code fixed (PG).

17 Nov 2004 Cleanup and merge of spherical bessel function routines (C.S.)
            added script to compute dependencies of a subroutine [Gerardo]

16 Nov 2004 Some non-declared variables explicitly declared (C.S.)

15 Nov 2004 punch_plot can now write the charge density, the total potential
            and V_bare+V_H also in the noncollinear case. (ADC)
            Small update of the documentation in example02. (ADC)

14 Nov 2004 - more FPMD/CP merging
            - new module for merged FPMD/CP restart subroutines
            - starting work on XML restart/punchx  (cp_restart.f90)

5 Nov 2004  Fixed a bug in the way tetrahedra variables were read/written
            on the restart file: since tetra is not alway allocated, the
            read_restart_tetra() and write_restart_tetra() can be called
            with all the arguments IF AND ONLY IF ltetra is true. otherwise
            read_restart_tetra() and write_restart_tetra() must be called
            with only the I/O unit. For further comments on this see the 
            documentation contained in Modules/io_base.f90 (C.S.)

4 Nov 2004   Old parallel variables (such as me mypool) removed everywhere
             Missing GPL headers added to Raman (CS)
             nspin imported twice in force_hub.f90 (Axel)
             Makefiles use now $(MAKE) and $(MFLAGS) as proposed
             by Axel - should allow for the use of GNU make in
             system having broken makefile - please test (PG)
             added autoconf check for make [Gerardo]

3 Nov 2004   path optimization: 
             1) cleanup of the output format (more informative)
             2) some cleanup of internal routines
             3) added a couple of input variables and changed the default value
                of ds from 1.5 to 1.0.